unpackaged/main/default/objects/legaldeskapp__LegalDesk_Log__c/legaldeskapp__LegalDesk_Log__c.object-meta.xml
<CustomObject>
    <label>Streamline AI Log</label>
    <nameField>
        <displayFormat>LOG-{0000}</displayFormat>
        <label>Streamline AI Logging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Streamline AI Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>