unpackaged/main/default/objects/legaldeskapp__LegalDesk_Log__c/fields/legaldeskapp__Admin_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Admin_Email_Address__c</fullName>
    <label>Admin Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>