unpackaged/main/default/objects/legaldeskapp__LegalDesk_Log__c/fields/legaldeskapp__Admin_Run_Trigger__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Admin_Run_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admin Run Trigger</label>
    <type>Checkbox</type>
</CustomField>