unpackaged/main/default/objects/legaldeskapp__LegalDesk_Log__c/fields/legaldeskapp__Admin_Type__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Admin_Type__c</fullName>
    <label>Admin Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>