unpackaged/main/default/objects/legaldeskapp__LegalDesk_Log__c/fields/legaldeskapp__Email_Template_Message__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Email_Template_Message__c</fullName>
    <formula>IF(legaldeskapp__Status__c = &#39;OK&#39;, &#39;Your request has been successfully created in Streamline AI. See link to view your request in Streamline AI - &#39; &amp; legaldeskapp__StreamLineAIURL__c &amp; &#39;requests/&#39; &amp;  legaldeskapp__LegalDesk_Task_Id__c, &#39;Your request could not be created. Please contact your system administrator.&#39;)</formula>
    <label>Email Template Message</label>
    <type>Text</type>
</CustomField>