unpackaged/main/default/objects/legaldeskapp__LegalDesk_Log__c/fields/legaldeskapp__Mapping_Custom_Form__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Mapping_Custom_Form__c</fullName>
    <label>Mapping Custom Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>