unpackaged/main/default/objects/legaldeskapp__LegalDesk_Log__c/fields/legaldeskapp__Mapping_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Mapping_Data_Type__c</fullName>
    <label>Mapping Data Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>