unpackaged/main/default/objects/legaldeskapp__LegalDesk_Log__c/fields/legaldeskapp__Mapping_Display__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Mapping_Display__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mapping Display</label>
    <type>Checkbox</type>
</CustomField>