unpackaged/main/default/objects/legaldeskapp__LegalDesk_Log__c/fields/legaldeskapp__Mapping_LegalDesk_Field__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Mapping_LegalDesk_Field__c</fullName>
    <label>Mapping Streamline AI Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>