unpackaged/main/default/objects/legaldeskapp__LegalDesk_Log__c/fields/legaldeskapp__Mapping_LegalDesk_Field_Id__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Mapping_LegalDesk_Field_Id__c</fullName>
    <label>Mapping Streamline AI Field Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>