unpackaged/main/default/objects/legaldeskapp__LegalDesk_Log__c/fields/legaldeskapp__Mapping_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Mapping_Object_API_Name__c</fullName>
    <label>Mapping Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>