unpackaged/main/default/objects/legaldeskapp__LegalDesk_Log__c/fields/legaldeskapp__Mapping_Question__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Mapping_Question__c</fullName>
    <label>Mapping Question</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>