unpackaged/main/default/objects/legaldeskapp__LegalDesk_Log__c/fields/legaldeskapp__Mapping_Record_Type_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Mapping_Record_Type_Developer_Name__c</fullName>
    <label>Mapping Record Type Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>