unpackaged/main/default/objects/legaldeskapp__LegalDesk_Log__c/fields/legaldeskapp__Mapping_Template_Question__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Mapping_Template_Question__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mapping Template Question</label>
    <type>Checkbox</type>
</CustomField>