unpackaged/main/default/objects/legaldeskapp__LegalDesk_Log__c/fields/legaldeskapp__Migration_Label__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Migration_Label__c</fullName>
    <label>Migration Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>