unpackaged/main/default/objects/legaldeskapp__LegalDesk_Log__c/fields/legaldeskapp__Option_Value__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Option_Value__c</fullName>
    <label>Option Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>