unpackaged/main/default/objects/legaldeskapp__LegalDesk_Log__c/fields/legaldeskapp__Salesforce_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Salesforce_Record_Id__c</fullName>
    <description>Salesforce ID of record where task creation request was sent to Streamline AI</description>
    <label>Salesforce Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>