unpackaged/main/default/objects/legaldeskapp__LegalDesk_Log__c/fields/legaldeskapp__StreamLineAIURL__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__StreamLineAIURL__c</fullName>
    <label>StreamLineAIURL</label>
    <length>128</length>
    <type>Text</type>
</CustomField>