unpackaged/main/default/objects/legaldeskapp__LegalDesk_Log__c/fields/legaldeskapp__User_Email__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__User_Email__c</fullName>
    <label>User Email</label>
    <type>Email</type>
</CustomField>