unpackaged/main/default/objects/legaldeskapp__LegalDesk_Log__c/validationRules/legaldeskapp__Null_Check_for_Admin_Records.validationRule-meta.xml
<ValidationRule>
    <fullName>legaldeskapp__Null_Check_for_Admin_Records</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(legaldeskapp__Type__c, &#39;Admin&#39;),
OR(
ISBLANK(legaldeskapp__Migration_Name__c),
ISBLANK(legaldeskapp__Migration_Label__c),
ISBLANK(legaldeskapp__Admin_Type__c)
)
)</errorConditionFormula>
    <errorMessage>Please ensure DeveloperName, MasterLabel and Type__c are populated in the custom metadata record.</errorMessage>
</ValidationRule>