unpackaged/main/default/objects/legaldeskapp__LegalDesk_Log__c/validationRules/legaldeskapp__Null_Check_for_Mapping_Records.validationRule-meta.xml
<ValidationRule>
    <fullName>legaldeskapp__Null_Check_for_Mapping_Records</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(legaldeskapp__Type__c, &#39;Mapping&#39;),
OR(
ISBLANK(legaldeskapp__Migration_Name__c),
ISBLANK(legaldeskapp__Migration_Label__c),
ISBLANK(legaldeskapp__Mapping_Type__c),
ISBLANK(legaldeskapp__Mapping_Object_API_Name__c),
ISBLANK(legaldeskapp__Mapping_Question__c),
ISBLANK(legaldeskapp__Mapping_LegalDesk_Field__c) 
)
)</errorConditionFormula>
    <errorMessage>Please ensure DeveloperName, MasterLabel, Type__c, Object_API_Name__c, Question__c and LegalDesk_Field__c are populated in the custom metadata record.</errorMessage>
</ValidationRule>