unpackaged/main/default/objects/legaldeskapp__LegalDesk_Log__c/validationRules/legaldeskapp__Null_Check_for_Option_Records.validationRule-meta.xml
<ValidationRule>
    <fullName>legaldeskapp__Null_Check_for_Option_Records</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(legaldeskapp__Type__c, &#39;Option&#39;),
OR(
ISBLANK(legaldeskapp__Migration_Name__c),
ISBLANK(legaldeskapp__Migration_Label__c),
ISBLANK(legaldeskapp__Option_Value__c)
)
)</errorConditionFormula>
    <errorMessage>Please ensure DeveloperName, MasterLabel and Value__c are populated in the custom metadata record.</errorMessage>
</ValidationRule>